# webtest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Notes.txt  README.md  spec.yaml
.github/workflows/: general.yml  scheduled-audit.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220910091421_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
