[package]
name = "webtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"]}
config = "0.13.2"
tracing-log = "0.1.3"

tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
serde-aux = "4.0.0"
unicode-segmentation = "1.9.0"
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]


# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claim = "0.5"
reqwest = "0.11"
once_cell = "1.14.0"
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webtest"
